web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/inner-parens-object-pattern-member/output.txt
[SyntaxError]: Binding member expression. (1,4)
1|({ a: (foo.qux) } = {}) => {}
 |  ^
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|({ a: (foo.qux) } = {}) => {}
 |^
